--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,6 +7,14 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Comprá los productos essen al mejor precio. Ingresá y enterate de todas las ofertas disponibles.">
+    <meta name="keywords" content="essen, ollas essen, comprar essen, trabajar en essen, essen en cuotas">
+    <meta name="author" content="matiporcel">
+    <meta property="og:title" content="Natissen | Todo lo que necesitás de Essen, en un sólo lugar.">
+    <meta property="og:image" content="https://matiporcel.github.io/Natissen-2/imagenes/caru1.jpg">
+    <meta property="og:description" content="Encontrá una gran variedad de productos Essen al mejor precio. Cuotas sin interés con todas las tarjetas bancarias">
+    <meta property="og:creator" content="matiporcel">
+    <link rel="icon" type="image/png" href="./imagenes/favicon.png">
     <title>Productos</title>
 </head>
 <body>
