--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
     <section class="container">
         <div class="row">
-            <div class="col-sm-12 col-md-8 col-lg-8"><img class="logo-row" src="imagenes/collage.jpg" alt=""></div>
+            <div class="col-sm-12 col-md-8 col-lg-8"><img class="logo-row" src="imagenes/collage.jpg" alt="Collage productos Essen"></div>
             <div class="col-sm-12 col-md-4 col-lg-4">
                 <h1>Creá con Essen</h1>
                 <p class="container-text">Bienvenidas/os a mi página. Mi nombre es Natalia y estoy acá para asesorarte
