--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,25 +44,25 @@
 <section>
     <div class="container-products">
         <div class="item">
-            <img src="../imagenes/AQUA - cuadrada2.png">
+            <img src="../imagenes/AQUA - cuadrada2.png" alt="Cacerola Essen cuadrada aqua">
             <h3>Línea Aqua</h3>
             <br>
             <a href="#">Ver más</a>
         </div>
         <div class="item">
-            <img src="../imagenes/MARSALA2.png">
+            <img src="../imagenes/MARSALA2.png" alt="Cacerola Essen cuadrada marsala">
             <h3>Línea Marsala</h3>
             <br>
             <a href="#">Ver más</a>
         </div>
         <div class="item">
-            <img src="../imagenes/TERRA2.png">
+            <img src="../imagenes/TERRA2.png" alt="Cacerola Essen cuadrada terra">
             <h3>Línea Terra</h3>
             <br>
             <a href="#">Ver más</a>
         </div>
         <div class="item">
-            <img src="../imagenes/bazar3.png">
+            <img src="../imagenes/bazar3.png" alt="Bazar Essen">
             <h3>Bazar</h3>
             <br>
             <a href="#">Ver más</a>
