--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -45,25 +45,25 @@
 <section>
     <div class="container-products">
         <div class="item">
-            <img src="../imagenes/flan-casero.jpg">
+            <img src="../imagenes/flan-casero.jpg" alt="Flan casero">
             <h3>Flan casero</h3>
             <br>
             <a href="#">Ver receta</a>
         </div>
         <div class="item">
-            <img src="../imagenes/Guisodelentejas2.jpg">
+            <img src="../imagenes/Guisodelentejas2.jpg" alt="Guiso de lentejas">
             <h3>Guiso de lentejas</h3>
             <br>
             <a href="#">Ver receta</a>
         </div>
         <div class="item">
-            <img src="../imagenes/carbonada2.jpg">
+            <img src="../imagenes/carbonada2.jpg" alt="Carbonada">
             <h3>Carbonada</h3>
             <br>
             <a href="#">Ver receta</a>
         </div>
         <div class="item">
-            <img src="../imagenes/R75Ratatouille2.jpg">
+            <img src="../imagenes/R75Ratatouille2.jpg" alt="Ratatouille">
             <h3>Ratatouille</h3>
             <br>
             <a href="#">Ver receta</a>
