--- a/pages/trabaja-conmigo.html
+++ b/pages/trabaja-conmigo.html
@@ -70,7 +70,7 @@
                 </form>
             </div>
             <div class="contactImg">
-                <img src="../imagenes/imgbin_essen-food-kitchen-stock-pots-empresa-png.png" alt="">
+                <img src="../imagenes/imgbin_essen-food-kitchen-stock-pots-empresa-png.png" alt="Logo Essen">
             </div>
     </section>
     <footer class="text-white pt-5 pb-4">
