--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="https://matiporcel.github.io/Natissen-2/imagenes/caru1.jpg">
     <meta property="og:description" content="Encontrá una gran variedad de productos Essen al mejor precio. Cuotas sin interés con todas las tarjetas bancarias">
     <meta property="og:creator" content="matiporcel">
-    <link rel="icon" type="image/png" href="./imagenes/favicon.png">
+    <link rel="icon" type="image/png" href="../imagenes/favicon.png">
     <title>Productos</title>
 </head>
 <body>
