--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -52,13 +52,13 @@
             <img src="../imagenes/flan-casero.jpg" alt="Flan casero">
             <h3>Flan casero</h3>
             <br>
-            <a href="#">Ver receta</a>
+            <a href="./flancasero.html">Ver receta</a>
         </div>
         <div class="item">
             <img src="../imagenes/Guisodelentejas2.jpg" alt="Guiso de lentejas">
             <h3>Guiso de lentejas</h3>
             <br>
-            <a href="#">Ver receta</a>
+            <a href="./guisodelentejas.html">Ver receta</a>
         </div>
         <div class="item">
             <img src="../imagenes/carbonada2.jpg" alt="Carbonada">
