--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
     <title>Contacto</title>
 </head>
 <body>
-    <a href="https://api.whatsapp.com/send?phone=5491162876765" class="whatsapp-float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=5491157961807" class="whatsapp-float" target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
       </a>
    <header>
@@ -83,14 +83,14 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-white">Natissen ©</h5>
                 </div>
 
-                <div>
+                <div class="container">
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h5 class="text-white text-uppercase mb-4 ">Mis redes:
                         </h5>
-                        <a href="https://instagram.com" class="instagram-float" target="_blank">
+                        <a href="https://www.instagram.com/nataliaencinaa_/" class="instagram-float" target="_blank">
                             <i class="fa-brands fa-instagram fa-2xl"></i>
                           </a>  
-                          <a href="https://facebook.com" class="facebook-float" target="_blank">
+                          <a href="https://www.facebook.com/profile.php?id=100090991156020" class="facebook-float" target="_blank">
                             <i class="fa-brands fa-facebook fa-2xl"></i>
                     </div>
                 </div>
