--- a/pages/linea-aqua.html
+++ b/pages/linea-aqua.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
@@ -17,16 +17,15 @@
     <meta property="og:description" content="Encontrá una gran variedad de productos Essen al mejor precio. Cuotas sin interés con todas las tarjetas bancarias">
     <meta property="og:creator" content="matiporcel">
     <link rel="icon" type="image/png" href="../imagenes/favicon.png">
-    <title>Trabajá conmigo</title>
+    <title>Linea Aqua</title>
 </head>
 <body>
     <a href="https://api.whatsapp.com/send?phone=5491157961807" class="whatsapp-float" target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
       </a>
-<header>
+    <header>
     <nav class="navbar sticky-top navbar-expand-md navbar-dark">
         <div class="container-fluid">
-
             <a class="navbar-brand" href="../index.html">
                 <img src="../imagenes/imgbin_essen-food-kitchen-stock-pots-empresa-png.png" alt="logo" width="70px"
                     height="70px">
@@ -39,43 +38,40 @@
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="recetas.html">Recetas</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="recetas.html">Recetas</a></li>
                     <li class="nav-item"><a class="nav-link" href="trabaja-conmigo.html">Trabajá conmigo<a>
                     </li>
-                    <li class="nav-item"><a class="nav-link active" href="contacto.html">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 </header>
-    <section class="container">
-        <div class="contactForm">
-            <div class="form">
-                <div class="texto">
-                    <h2>Trabajá conmigo</h2>
-                    <p>Si estás pensando en vender productos Essen y cambiar tu futuro como lo hice yo. Completá los
-                        siguientes campos. En la brevedad me estaré comunicando con vos.</p>
-                </div>
-                <form action="">
-                    <div class="inputBox">
-                        <label for="">Tu nombre</label>
-                        <input type="text" placeholder="Nombre...">
-                    </div>
-                    <div class="inputBox">
-                        <label for="">Tu email
-                        </label>
-                        <input type="text" placeholder="Email...">
-                    </div>
-                    <div class="inputBox">
-                        <label for="">Tu mensaje</label>
-                        <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje..."></textarea>
-                    </div>
-                    <input type="submit" value="Enviar Mensaje">
-                </form>
+<section>
+        <div class="container-products">
+            <div class="item">
+                <img src="../imagenes/AQUA - cuadrada2.png" alt="Cuadrada Aqua 28 cm">
+                <h3>Cuadrada 28 cm</h3>
             </div>
-            <div class="contactImg">
-                <img src="../imagenes/imgbin_essen-food-kitchen-stock-pots-empresa-png.png" alt="Logo Essen">
+            <div class="item">
+                <img src="../imagenes/AQUA - cacerola24.png" alt="Cacerola Aqua">
+                <h3>Cacerola 24 cm</h3>
+
             </div>
+            <div class="item">
+                <img src="../imagenes/AQUA - flip.png" alt="Flip Aqua">
+                <h3 class="sarten">Flip 2.0</h3>
+  
+            </div>
+            <div class="item">
+                <img src="../imagenes/AQUA - sarten con asas.png" alt="Sarten con asas Aqua">
+                <h3>Sartén con asas 24 cm</h3>
+        
+            </div>
+        </div>
+        <div class="producto-info">
+            <h4>Envime mensaje por cualquier medio para pedir información del producto en el que estes interesada/o</h4>
+        </div>
     </section>
     <footer class="text-white pt-5 pb-4">
         <div class="container text-center text-md-left">
@@ -102,8 +98,8 @@
         </div>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 </html>
