--- a/pages/productos.html
+++ b/pages/productos.html
@@ -19,7 +19,7 @@
     <title>Productos</title>
 </head>
 <body>
-    <a href="https://api.whatsapp.com/send?phone=5491162876765" class="whatsapp-float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=5491157961807" class="whatsapp-float" target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
       </a>
     <header>
@@ -51,25 +51,25 @@
             <img src="../imagenes/AQUA - cuadrada2.png" alt="Cacerola Essen cuadrada aqua">
             <h3>Línea Aqua</h3>
             <br>
-            <a href="#">Ver más</a>
+            <a href="./linea-aqua.html">Ver más</a>
         </div>
         <div class="item">
             <img src="../imagenes/MARSALA2.png" alt="Cacerola Essen cuadrada marsala">
-            <h3>Línea Marsala</h3>
+            <h3>Línea Cherry</h3>
             <br>
-            <a href="#">Ver más</a>
+            <a href="./linea-cherry.html">Ver más</a>
         </div>
         <div class="item">
             <img src="../imagenes/TERRA2.png" alt="Cacerola Essen cuadrada terra">
             <h3>Línea Terra</h3>
             <br>
-            <a href="#">Ver más</a>
+            <a href="./linea-terra.html">Ver más</a>
         </div>
         <div class="item">
             <img src="../imagenes/bazar3.png" alt="Bazar Essen">
             <h3>Bazar</h3>
             <br>
-            <a href="#">Ver más</a>
+            <a href="./bazar.html">Ver más</a>
         </div>
     </div>
 </section>
@@ -85,14 +85,14 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-white">Natissen ©</h5>
                 </div>
 
-                <div>
+                <div class="container">
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                         <h5 class="text-white text-uppercase mb-4 ">Mis redes:
                         </h5>
-                        <a href="https://instagram.com" class="instagram-float" target="_blank">
+                        <a href="https://www.instagram.com/nataliaencinaa_/" class="instagram-float" target="_blank">
                             <i class="fa-brands fa-instagram fa-2xl"></i>
                           </a>  
-                          <a href="https://facebook.com" class="facebook-float" target="_blank">
+                          <a href="https://www.facebook.com/profile.php?id=100090991156020" class="facebook-float" target="_blank">
                             <i class="fa-brands fa-facebook fa-2xl"></i>
                     </div>
                 </div>
