--- a/pages/ratatouille.html
+++ b/pages/ratatouille.html
@@ -17,7 +17,7 @@
     <meta property="og:description" content="Encontrá una gran variedad de productos Essen al mejor precio. Cuotas sin interés con todas las tarjetas bancarias">
     <meta property="og:creator" content="matiporcel">
     <link rel="icon" type="image/png" href="../imagenes/favicon.png">
-    <title>Carbonada</title>
+    <title>Ratatouille</title>
 </head>
 <body>
     <a href="https://api.whatsapp.com/send?phone=5491157961807" class="whatsapp-float" target="_blank">
@@ -50,41 +50,36 @@
 <section class="container">
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4">
-    <img src="../imagenes/carbonada2.jpg" alt="Carbonada">
+    <img src="../imagenes/R75Ratatouille2.jpg" alt="Carbonada">
         </div>
         <div class="col-sm-12 col-md-6 col-lg-8">
-    <h3>Carbonada</h3>
+    <h3>Ratatouille</h3>
     <h5>Ingredientes:</h5>
     <ul>
-        <li>500 gramos de carne de res (preferiblemente cortes de carne tiernos como lomo, bola de lomo o cuadril), cortada en cubos pequeños</li>
-        <li>2 cebollas grandes, picadas</li>
-        <li>2 dientes de ajo, picados</li>
-        <li>2 zanahorias, peladas y cortadas en rodajas</li>
-        <li>2 papas, peladas y cortadas en cubos</li>
-        <li>1 morrón rojo, cortado en cubos</li>
-        <li>1 morrón verde, cortado en cubos</li>
-        <li>2 tomates, pelados y picados (o puedes usar tomates enlatados)</li>
-        <li>2 tazas de caldo de carne</li>
-        <li>1 taza de vino tinto</li>
-        <li>1 taza de choclo enlatado (opcional)</li>
-        <li>1 taza de arvejas (pueden ser frescas, congeladas o enlatadas)</li>
-        <li>1 hoja de laurel</li>
-        <li>1 cucharadita de pimentón dulce</li>
+        <li>1 berenjena grande</li>
+        <li>2 calabacines medianos</li>
+        <li>1 pimiento rojo</li>
+        <li>1 pimiento verde</li>
+        <li>1 cebolla grande</li>
+        <li>3 tomates grandes</li>
+        <li>3 dientes de ajo, picados</li>
+        <li>Aceite de oliva</li>
         <li>Sal y pimienta al gusto</li>
-        <li>Aceite vegetal, para cocinar</li>
+        <li>Hierbas provenzales (tomillo, romero, orégano) al gusto</li>
+        <li>Hojas de albahaca fresca, para decorar (opcional)</li>
     </ul>
 
     <h5>Preparación</h5>
     <ul>
-        <li>En una olla grande o una cacerola pesada, calienta un poco de aceite vegetal a fuego medio-alto. Agrega la carne de res y cocínala hasta que esté dorada por todos lados. Retira la carne de la olla y reserva.</li>
-        <li>En la misma olla, agrega las cebollas y el ajo. Cocina hasta que las cebollas estén transparentes y fragantes.</li>
-        <li>Añade los pimientos, las zanahorias y las papas a la olla. Sofríe las verduras por unos minutos hasta que comiencen a ablandarse.</li>
-        <li>Agrega los tomates picados a la olla y cocina por unos minutos más hasta que se ablanden.</li>
-        <li>Vuelve a colocar la carne en la olla y mezcla todo junto. Añade el caldo de carne, el vino tinto, la hoja de laurel y el pimentón dulce. Remueve bien.</li>
-        <li>Lleva la mezcla a ebullición y luego reduce el fuego a medio-bajo. Tapa la olla y deja que la carbonada se cocine a fuego lento durante aproximadamente 1 hora, o hasta que la carne esté tierna y las verduras estén suaves.</li>
-        <li>A mitad de la cocción, agrega el maíz y las arvejas a la olla. Continúa cocinando hasta que todas las verduras estén tiernas.</li>
-        <li>Sazona la carbonada con sal y pimienta al gusto. Ajusta los condimentos según tu preferencia.</li>
-        <li>Retira la hoja de laurel antes de servir. Sirve la carbonada caliente en platos hondos.</li>
+        <li>Lava todas las verduras. Corta la berenjena, los calabacines, los pimientos y los tomates en rodajas de aproximadamente medio centímetro de grosor. Puedes dejar la piel de las verduras para agregar textura y color al plato.</li>
+        <li>Coloca las rodajas de berenjena en un colador grande y espolvorea sal sobre ellas. Deja que repose durante unos 30 minutos para que suelten el exceso de líquido. Esto ayudará a reducir su amargor.</li>
+        <li>Mientras tanto, en una sartén grande, calienta un poco de aceite de oliva a fuego medio. Agrega la cebolla picada y el ajo, y saltea hasta que estén tiernos y fragantes.</li>
+        <li>Una vez que la berenjena haya reposado, enjuágala bajo agua fría para quitar la sal y sécala bien con papel absorbente.</li>
+        <li>Agrega la berenjena, los calabacines y los pimientos a la sartén con la cebolla y el ajo. Cocina las verduras a fuego medio-alto durante unos 10 minutos, revolviendo ocasionalmente, hasta que estén ligeramente doradas y tiernas.</li>
+        <li>Agrega los tomates picados a la sartén y sazona con sal, pimienta y hierbas provenzales al gusto. Cocina a fuego medio durante otros 10 minutos, o hasta que los tomates se hayan ablandado y se haya formado una especie de salsa.</li>
+        <li>Prueba y ajusta los condimentos según tu preferencia. Si lo deseas, puedes agregar un poco más de aceite de oliva en este punto para realzar el sabor.</li>
+        <li>Retira del fuego y deja reposar el ratatouille durante unos minutos antes de servir. Esto permitirá que los sabores se mezclen y se intensifiquen.</li>
+        <li>Sirve el ratatouille caliente o a temperatura ambiente. Puedes decorar con hojas de albahaca fresca antes de servir, si lo deseas.</li>
     </ul>
         </div>
 </div>
