--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -19,7 +19,7 @@
     <title>Recetas</title>
 </head>
 <body>
-    <a href="https://api.whatsapp.com/send?phone=5491162876765" class="whatsapp-float" target="_blank">
+    <a href="https://api.whatsapp.com/send?phone=5491157961807" class="whatsapp-float" target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
       </a>
     <header>
@@ -64,13 +64,13 @@
             <img src="../imagenes/carbonada2.jpg" alt="Carbonada">
             <h3>Carbonada</h3>
             <br>
-            <a href="#">Ver receta</a>
+            <a href="./carbonada.html">Ver receta</a>
         </div>
         <div class="item">
             <img src="../imagenes/R75Ratatouille2.jpg" alt="Ratatouille">
             <h3>Ratatouille</h3>
             <br>
-            <a href="#">Ver receta</a>
+            <a href="./ratatouille.html">Ver receta</a>
         </div>
     </div>
 </section>
@@ -82,14 +82,14 @@
                         <h5 class="text-uppercase mb-4 font-weight-bold text-white">Natissen ©</h5>
                     </div>
     
-                    <div>
+                    <div class="container">
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
                             <h5 class="text-white text-uppercase mb-4 ">Mis redes:
                             </h5>
-                            <a href="https://instagram.com" class="instagram-float" target="_blank">
+                            <a href="https://www.instagram.com/nataliaencinaa_/" class="instagram-float" target="_blank">
                                 <i class="fa-brands fa-instagram fa-2xl"></i>
                               </a>  
-                              <a href="https://facebook.com" class="facebook-float" target="_blank">
+                              <a href="https://www.facebook.com/profile.php?id=100090991156020" class="facebook-float" target="_blank">
                                 <i class="fa-brands fa-facebook fa-2xl"></i>
                         </div>
                     </div>
