--- a/pages/linea-cherry.html
+++ b/pages/linea-cherry.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="producto-info">
-            <h4>Envime mensaje por cualquier medio para pedir información del producto en el que estes interesada/o</h4>
+            <h4>Enviame mensaje por cualquier medio para pedir información del producto en el que estes interesada/o</h4>
         </div>
 </section>
 <footer class="text-white pt-5 pb-4">
