--- a/pages/ratatouille.html
+++ b/pages/ratatouille.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="../fontawesome-free-6.4.0-web/fontawesome-free-6.4.0-web/css/all.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
     <meta name="description" content="Comprá los productos essen al mejor precio. Ingresá y enterate de todas las ofertas disponibles.">
     <meta name="keywords" content="essen, ollas essen, comprar essen, trabajar en essen, essen en cuotas">
     <meta name="author" content="matiporcel">
